[workspace]
members = [
    "memory_validator",
    "json_validator",
    "sanitizer",
    "url_builder",
    "checkpoint_writer",
    "prompt_sandbox",
]
resolver = "2"

[workspace.dependencies]
pyo3        = { version = "0.22", features = ["extension-module"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1.10"
url         = "2"
sha2        = "0.10"
hex         = "0.4"
tokio       = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "fs", "sync", "time"] }
parking_lot = "0.12"

